Ensure background image covers entire background

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,26 +12,29 @@
 
 html,
 body {
-height: 100%;  
-/* overflow-x: hidden; */
-  padding:2rem;
+  height: 95vh;
+  width: 95vw;
+  margin: 0;
+  overflow: hidden;
+}
+
+html {
+  color: var(--foreground);
+  background: var(--background);
+  background: url(/images/background.svg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  background-image: url("/images/background.svg");
-  background-repeat: no-repeat; 
-  background-size: 100% 100%;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  margin: 50px;
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+
 }
 
 a {
